force-app/main/default/objects/User_Badge__c/User_Badge__c.object-meta.xml
<CustomObject>
    <label>User Badge</label>
    <nameField>
        <label>User_Badge__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>