force-app/main/default/objects/User_Badge__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>Badge__c</referenceTo>
    <relationshipLabel>User Badges</relationshipLabel>
    <relationshipName>User_Badges</relationshipName>
    <type>Lookup</type>
</CustomField>