force-app/main/default/objects/User_Badge__c/fields/Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Earned_Date__c</fullName>
    <label>Earned_Date__c</label>
    <type>Date</type>
</CustomField>